<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/tooalbar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/invite_tv_1"
        android:textColor="@color/color_de000000"
        android:textSize="15sp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView"
        android:textColor="@color/color_de000000"
        android:textSize="15sp"
        android:text="@string/invite_tv_2"/>

    <Button
        android:id="@+id/btn_bluetooth"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        style="@style/style_invite_btn_bluetooth"
        android:textColor="@color/white"
        android:text="@string/invite_btn_bluetooth"
        android:layout_below="@+id/textView_2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_hotspot"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        style="@style/style_invite_btn_hotspot"
        android:textColor="@color/white"
        android:text="@string/invite_btn_hotspot"
        android:layout_below="@+id/btn_bluetooth"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/line"
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:layout_below="@+id/btn_hotspot"
        android:layout_marginTop="34dp"
        android:background="@drawable/dotted_line"
        android:layerType="software"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/line"
        android:layout_marginTop="18dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/googleaddress"
        android:background="#8a000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/qr_code"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textColor="@color/color_8a000000"
        android:text="@string/invite_tv_3"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_more"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#ffffff"
        android:text="@string/invite_btn_more"
        android:textColor="@color/color_de000000"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>