<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tooalbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!--左侧-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="17dp"
                        android:text="@string/instruction_tv_left_title"
                        android:textColor="@color/color_de000000"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@mipmap/cl1" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="13dp"
                        android:text="@string/instruction_tv_left"
                        android:textColor="@color/color_de000000"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="33dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/instruction_1"
                            android:textColor="@color/color_de2a61ff"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instruction_tv_left_1"
                            android:textColor="@color/color_de000000"
                            android:textSize="14sp" />

                    </LinearLayout>


                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="13dp"
                        android:src="@mipmap/cl2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="23dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instruction_2"
                            android:textColor="@color/color_de2a61ff"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="9dp"
                            android:layout_marginRight="9dp"
                            android:text="@string/instruction_tv_left_2"
                            android:singleLine="false"
                            android:textColor="@color/color_de000000"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="142dp"
                        android:layout_height="142dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="14dp"
                        android:src="@mipmap/cl3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/instruction_3"
                            android:textColor="@color/color_de2a61ff"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instruction_tv_left_3"
                            android:textColor="@color/color_de000000"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="155dp"
                        android:layout_height="49dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:src="@mipmap/cl4" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#66CCFF" />


                <!--右侧-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="17dp"
                        android:text="@string/instruction_tv_right_title"

                        android:textColor="@color/color_de000000"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="51dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/cr1" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="13dp"
                        android:text="@string/instruction_tv_right"
                        android:textColor="@color/color_de000000"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="33dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/instruction_1"
                            android:textColor="@color/color_de6420ff"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instruction_tv_right_1"
                            android:textColor="@color/color_de000000"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="13dp"
                        android:src="@mipmap/cr2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="23dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/instruction_2"
                            android:textColor="@color/color_de6420ff"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="9dp"
                            android:layout_marginRight="9dp"
                            android:text="@string/instruction_tv_right_2"
                            android:singleLine="false"
                            android:textColor="@color/color_de000000"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="142dp"
                        android:layout_height="142dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="14dp"
                        android:src="@mipmap/cr3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/instruction_3"
                            android:textColor="#de6420ff"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instruction_tv_right_3"
                            android:textColor="#de000000"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="155dp"
                        android:layout_height="49dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="9dp"
                        android:src="@mipmap/cr4" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:text="@string/instruction_tv_tip"
                android:textColor="#8a000000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/instruction_tv_tip_body"
                android:textColor="#8a000000"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>